# Telegram-Domain-Checks

./: pyproject.toml
src/: domain.json  main.py  saver.py  telegram.py  utils.py  whois.py  whois_search.py
tests/: test_whois.py
