[tool.poetry]
name = "parser domen"
version = "0.1.0"
description = ""
authors = ["Denis <denis30510@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.24.1"
ujson = "^5.8.0"
telebot = "^0.0.5"
bs4 = "^0.0.1"
lxml = "^4.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
